 (Format: Year/Month/Day)
Changes for 1.0rc2:
*06/06/23:
   * Make startfluxbox aware of --program-prefix and --program-suffix (Mark)
     configure.in util/Makefile.am util/startfluxbox.in
*06/06/22:
   * new Resource: session.modKey: <modkey> (thanks Jim Ramsay i dot am at jimramsay dot com)
     new Command: SetModKey <modkey>
     eg: session.modKey: Mod4   allows to use the winkey to resize and move
     windows and have Mod1 (Alt) free for using blender or Maya.
     FbCommands.cc Window.cc fluxbox.hh FbCommandFactory.cc FbCommands.hh fluxbox.cc
     doc/fluxbox.1.in
*06/06/21:
   * Fix de_DE translation (thanks Michael Bueker)
   * Fix nls (Simon)
     - file location was wrong. nls wouldn't have worked, why did no-one say? 
     - Messages output on stdout/err now properly in local encoding
     - Check for existence of catalog file, if it doesn't exist, and we can
       convert from UTF-8, try loading that one instead.
     - bunch of files changed due to macro name change:
       + Use _FB_XTEXT if the text will go out to X (for X fonts)
       + Use _FB_CONSOLETEXT if the text will go to console (stdout/err)
     - add tab options and some other missing bits to C translation
     FbTk/I18n.hh/cc (+anything with _FB_TEXT)
*06/06/20:
   * Fix window placement when apps remembers size but not location (Simon)
     Window.cc
*06/06/19:
   * Add EUC-KR to ko_KR encodings (Simon)
     nls/ko_KR/ Makefile.am generated-EUC-KR.m
   * Try ignoring NotifyUngrab EnterNotify events for focus (Simon)
     - should fix incorrect focus reverts when menus etc closed with 
       mouse focus, but possibly have side effects, do tell...)
     Window.cc
   * Fix menu placement issue with (vertical) xinerama (Simon)
     - note, doesn't fix "submenus open on wrong screen" issue, that requires
       some more serious data movement.
     FbTk/Menu.cc
   * Fix bug #1507671, clock not updating on multiple screens (Simon)